--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ python-dotenv==1.0.1
 PyNaCl==1.5.0
 yt-dlp==2024.10.7
 validators==0.34.0
-typing_extensions==4.10.0
+typing_extensions==4.10.0 
+SQLAlchemy==2.0.40
+PyMySQL==1.1.1
+cryptography==42.0.5
